Added automatic reconnect for the database connection.
In case of a connection loss the processing of files is stopped and
continued automatically when the database is available again.
Tested with: Mast + Ceilometer

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -20,9 +20,9 @@ samplingTime = 5 sec
 ; database connection.
 [Common]
 configDir = ../../etc
-dataDir = /Users/kopmann/src/kitcube/data
-remoteDir = /Users/kopmann/src/kitcube/data
-archiveDir = /Users/kopmann/src/kitcube/archive
+dataDir = ../../../data
+remoteDir = ../../../data
+archiveDir = ../../../archive
 ;dbHost = localhost
 ;dbName = kitcube_actual
 ;dbUser = root
