Modified and added functionality of/to Norbert simulation device
modified:   etc/kitcube.ini
- added parameters for Norbert device
- white space changes

modified:   src/kitcube-devices/norbert.cpp
- modified constructor, getSensorGroup, setConfigDefaults, readHeader and
  getDataDir
- added writeHeader
- can now read inifile and parameters, header of data template file, create new
  data directory and file and write header to this file

modified:   src/kitcube-devices/test-device.cpp
changes due to test of Norbert device

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -3,7 +3,7 @@
 ;
 ;
 
-; Data server for simulation of device data 
+; Data server for simulation of device data
 [DataServer]
 module = Mast12-calc
 ;module = Mast01
@@ -16,7 +16,7 @@ module = Mast12-calc
 samplingTime = 5 sec
 
 
-; Global parameters for the whole setup related to the 
+; Global parameters for the whole setup related to the
 ; database connection.
 [Common]
 configDir = ../../etc
@@ -26,11 +26,11 @@ archiveDir = ../../../archive
 ;dbHost = localhost
 ;dbName = kitcube_actual
 ;dbUser = root
-;dbPassword = 
-rsyncArgs = --append  
+;dbPassword =
+rsyncArgs = --append
  
 [Axis]
-axis = DA DC E FC FH FM FV GI H MA MR MS N NF PA R T TA V VD   
+axis = DA DC E FC FH FM FV GI H MA MR MS N NF PA R T TA V VD
 DA_name = Density_(Air)
 DA_unit = kg/m^3
 DC_name = Density_(CO2)
@@ -117,7 +117,7 @@ sensorGroup = DAR
 sensorList = M01_01.DAR.sensors
 datafileTemplate = M12_01.DAR.template 
 ;datafileTemplate = Mast-Output
- 
+
 
 ; Caclulated values also in a 10 min interval
 [Mast12-calc]
@@ -138,7 +138,7 @@ moduleType = Ceilometer
 ;sensorGroup = chm
 sensorList = 20090625.chm.sensors
 datafileTemplate = 20090625.chm.template
-samplingTime = 1 sec 
+samplingTime = 1 sec
 
 [Ceilometer-dat]
 moduleType = Ceilometer
@@ -149,13 +149,17 @@ datafileTemplate = 20090625.chm.template
 datafileMask = chm20<index>.dat
 samplingTime = 1 sec
 
-
 [Simulation]
 moduleType = SimRandom
 moduleNumber = 101
 
-
-
-
-
-
+[Norbert]
+moduleType = Norbert
+moduleNumber = 190
+;moduleName = CM
+moduleComment = Testgerät
+sensorGroup = dat
+;sensorList = norbert.dat.sensors
+datafileTemplate = norbert.dat.template
+datafileMask = chm20<index>.dat
+samplingTime = 1 sec
