Use term "iniGroup" instead of "module" and "moduleName"

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -156,8 +156,8 @@ moduleNumber = 101
 [Norbert]
 moduleType = Norbert
 moduleNumber = 190
-;moduleName = CM
-moduleComment = Testgerät
+moduleName = NF
+moduleComment = Norbert's Testgerät
 sensorGroup = dat
 ;sensorList = norbert.dat.sensors
 datafileTemplate = norbert.dat.template
