--- a/configure.in
+++ b/configure.in
@@ -12,8 +12,8 @@ AM_PROG_LIBTOOL
 dnl
 dnl Add the base include directory
 dnl
-CXXFLAGS="$CXXFLAGS -I.. "
-CFLAGS="$CFLAGS -I.. "
+CXXFLAGS="$CXXFLAGS -I.. -Wall"
+CFLAGS="$CFLAGS -I.. -Wall"
 
 
 dnl
