Some fixes and a lot of changes due to compiler warnings
	modified:   src/kitcube-devices/norbert.cpp
fixed printout of date in Norbert::getFileNumber
some fixes due to compiler warnings bout data type format
some white space changes

	modified:   etc/kitcube.ini
Fixed datafileMask

	src/kitcube-reader/reader.cpp
white space change

	src/kitcube-devices/daqdevice.cpp
new printf and fixed comparison of string.find function

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -161,5 +161,5 @@ moduleComment = Norbert's Testgerät
 sensorGroup = dat
 ;sensorList = norbert.dat.sensors
 datafileTemplate = norbert.dat.template
-datafileMask = chm20<index>.dat
+datafileMask = 20<index>.dat
 samplingTime = 1 sec
