Added sensor file for Norbert module

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -159,7 +159,7 @@ moduleNumber = 190
 moduleName = NF
 moduleComment = Norbert's Testgerät
 sensorGroup = dat
-;sensorList = norbert.dat.sensors
+sensorList = norbert.dat.sensors
 datafileTemplate = norbert.dat.template
 datafileMask = 20<index>.dat
 samplingTime = 1 sec
