--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -157,7 +157,7 @@ moduleNumber = 101
 moduleType = Norbert
 moduleNumber = 190
 moduleName = NF
-moduleComment = Norbert's Testgerät
+moduleComment = Norbert's Testgeraet
 sensorGroup = dat
 sensorList = norbert.dat.sensors
 datafileTemplate = norbert.dat.template
