--- a/etc/Makefile.am
+++ b/etc/Makefile.am
@@ -5,8 +5,8 @@
 EXTRA_DIST = kitcube.ini kitcube-data.ipepdvadei kitcube-reader.ipepdvadei \
 	M12_01.DAR.template M12_01.DAX.template \
 	M01_01.DAR.sensors M01_01.DAX.sensors \
-	20090625.chm.sensors 20090625.chm.template
-	
+	20090625.chm.sensors 20090625.chm.template \
+	norbert.dat.template norbert.dat.sensors
 	
 	
 
