Added performance and lara module. So extention for reading ASCII coded data files. Re-organization of output messages.

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ stamp-h1
 *.o
 *.a
 .deps/
+src/kitcube-device/test-device
 src/kitcube-data/kitcube-data
 src/kitcube-reader/kitcube-reader
 src/kitcube-reader/kitcube-reader-mysql
