--- a/src/kitcube-devices/Makefile.am
+++ b/src/kitcube-devices/Makefile.am
@@ -3,8 +3,6 @@
 
 EXTRA_DIST = README 
 
-
-
 if USE_MYSQL
 MYSQL_TARGETS=libkitcube-devices-mysql.a
 endif
@@ -14,7 +12,10 @@ lib_LIBRARIES = libkitcube-devices.a  $(MYSQL_TARGETS)
 
 libkitcube_devices_a_SOURCES = daqdevice.h daqdevice.cpp createdevice.h createdevice.cpp \
 	daqbinarydevice.h daqbinarydevice.cpp \
-	simrandom.h simrandom.cpp mast.h mast.cpp ceilometer.h ceilometer.cpp
+	simrandom.h simrandom.cpp mast.h mast.cpp ceilometer.h ceilometer.cpp \
+	syslog.h syslog.cpp lara.h lara.cpp
+	
+	
 
 libkitcube_devices_a_CXXFLAGS =   
 
