--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -8,10 +8,12 @@
 module = Mast12-calc
 ;module = Mast01
 ;module = Simuation
+;module = Ceilometer
 
 ; Reading data and filling in the database
 [Reader]
-module = Mast12-calc
+;module = Mast12-calc
+module = Simulation
 ;samplingTime = 1 min
 samplingTime = 5 sec
 
@@ -30,7 +32,7 @@ archiveDir = ../../../archive
 rsyncArgs = --append  
  
 [Axis]
-axis = DA DC E FC FH FM FV GI H MA MR MS N NF PA R T TA V VD   
+axis = DA DC E FC FH FM FV GI H KD MA MR MS N NF PA QR R T TA V VD Z ZR 
 DA_name = Density_(Air)
 DA_unit = kg/m^3
 DC_name = Density_(CO2)
@@ -49,6 +51,8 @@ GI_name = Inklination
 GI_unit = grad
 H_name = Heigth
 H_unit = m
+KD_name = Duration
+KD_unit = s
 MA_name = Absolute_Humidity
 MA_unit = g/m^3
 MR_name = Relative_Humidity
@@ -61,6 +65,8 @@ NF_name = Percipitation_rate
 NF_unit = mm/s
 PA_name = Air_pressure
 PA_unit = hPa
+QR_name = Quality
+QR_unit = %
 R_name = Radiation
 R_unit = W/m^2
 T_name = Temperature 
@@ -73,6 +79,10 @@ V_name = Wind_speed
 V_unit = m/s
 VD_name = Wind_direction
 VD_unit = grad
+Z_name = Data
+Z_unit = Byte
+ZR_name = Data
+ZR_unit = %
 
 ; First letters: (See sensor naming convention)
 ;
@@ -85,10 +95,26 @@ VD_unit = grad
 ; F Rate
 
 
+;
+; Definition of modules that can be used by the module parameter of the applications
+;
+
+
 [Mast01]
 moduleType = Mast
 moduleNumber = 1
 datafileTemplate = M12_01.DAR.template
+
+
+[Mast01-mean]
+moduleType = Mast
+moduleNumber = 11
+moduleName = T01
+moduleComment = Turbulence_station_1
+datafileTemplate = M12_01.DAR.template
+sensorList = M01_01.DAR.sensors
+
+
 
 [Mast11-mean]
 moduleType = Mast
@@ -108,7 +134,7 @@ moduleType = Mast
 
 
 ; Mean data of 10min intervals
-[Mast12-mean]
+[Mast12-mean] ; --> moduleName !!!
 moduleType = Mast
 moduleNumber = 12
 moduleName = EB2
@@ -117,7 +143,7 @@ sensorGroup = DAR
 sensorList = M01_01.DAR.sensors
 datafileTemplate = M12_01.DAR.template 
 ;datafileTemplate = Mast-Output
- 
+
 
 ; Caclulated values also in a 10 min interval
 [Mast12-calc]
@@ -132,10 +158,10 @@ datafileTemplate = M12_01.DAX.template
 
 [Ceilometer]
 moduleType = Ceilometer
-;moduleNUmber = 20
-;moduleName = CM
-;moduleComment = Ceilometer
-;sensorGroup = chm
+moduleNUmber = 20
+moduleName = Ceilometer
+moduleComment = Ceilometer
+sensorGroup = chm
 sensorList = 20090625.chm.sensors
 datafileTemplate = 20090625.chm.template
 samplingTime = 1 sec 
