Fixed uninitialized pointer and added "skip header" when reading data
	modified:   src/kitcube-devices/daqdevice.cpp
fixed uninitialized pointer and added "skip header" when reading data

	modified:   src/kitcube-devices/simrandom.cpp
added header length

	modified:   etc/kitcube.ini
give password for MySQL

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -28,7 +28,7 @@ archiveDir = ../../../archive
 ;dbHost = localhost
 ;dbName = kitcube_actual
 ;dbUser = root
-;dbPassword =
+dbPassword = kitcube
 rsyncArgs = --append
 
 [Axis]
