Added JWD module reader for dd* data files, no writer yet
	new file:   src/kitcube-devices/jwd.cpp
	new file:   src/kitcube-devices/jwd.h
- added source files for JWD

	modified:   src/kitcube-devices/Makefile.am
- added JWD source files to build process

	modified:   src/kitcube-devices/createdevice.cpp
- added call to JWD

	new file:   etc/dd090826.template
- data file template for JWD dd* data files

	new file:   etc/jwd.sensors
- sensors file for JWD

	modified:   etc/kitcube.ini
- added JWD-dd iniGroup for JWD dd* data files
- added and changed axes

	modified:   src/kitcube-devices/daqdevice.cpp
- fixed bug in method getIndex if filename suffix is empty,
  now an empty file name suffix is taken into account
- lots of white space changes

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -32,11 +32,13 @@ dbPassword = kitcube
 rsyncArgs = --append
 
 [Axis]
-axis = DA DC E FC FH FM FV GI H KD MA MR MS N NF PA QR R T TA V VD Z ZR
+axis = DA DC DN E FC FH FM FV GI H KD KM LA MA MR MS N NF NO PA QR R T TA V VD X XR Z
 DA_name = Density_(Air)
 DA_unit = kg/m^3
 DC_name = Density_(CO2)
 DC_unit = mg/m^3
+DN_name = Spectral_Number_Density
+DN_unit = mm^3/m^3
 E_name = Voltage
 E_unit = V
 FC_name = CO2_flow
@@ -53,6 +55,10 @@ H_name = Heigth
 H_unit = m
 KD_name = Duration
 KD_unit = s
+KM_name = Duration
+KM_unit = min
+LA_name = Lambda
+LA_unit = 1/mm
 MA_name = Absolute_Humidity
 MA_unit = g/m^3
 MR_name = Relative_Humidity
@@ -62,7 +68,9 @@ MS_unit = g/kg
 N_name = Percipitation
 N_unit = mm
 NF_name = Percipitation_rate
-NF_unit = mm/s
+NF_unit = mm/h
+NO_name = No_Unit
+NO_unit = 
 PA_name = Air_pressure
 PA_unit = hPa
 QR_name = Quality
@@ -79,10 +87,12 @@ V_name = Wind_speed
 V_unit = m/s
 VD_name = Wind_direction
 VD_unit = grad
-Z_name = Data
-Z_unit = Byte
-ZR_name = Data
-ZR_unit = %
+X_name = Data
+X_unit = Byte
+XR_name = Data
+XR_unit = %
+Z_name = Reflectivity
+Z_unit = dB
 
 ; First letters: (See sensor naming convention)
 ;
@@ -158,7 +168,7 @@ datafileTemplate = M12_01.DAX.template
 
 [Ceilometer]
 moduleType = Ceilometer
-moduleNUmber = 20
+moduleNumber = 20
 moduleName = Ceilometer
 moduleComment = Ceilometer
 sensorGroup = chm
@@ -189,3 +199,14 @@ sensorList = norbert.dat.sensors
 datafileTemplate = norbert.dat.template
 datafileMask = 20<index>.dat
 samplingTime = 1 sec
+
+[JWD-dd]
+moduleName = JWD
+moduleNumber = 25
+moduleType = JWD
+moduleComment = Distrometer
+sensorGroup = dd
+sensorList = jwd.sensors
+datafileTemplate = dd090826.template
+datafileMask = dd<index>
+samplingTime = 1 min
