Changed and adapted axes names to fit to changes in kitcube.ini

--- a/etc/katrin.ini
+++ b/etc/katrin.ini
@@ -30,7 +30,7 @@ archiveDir = ../../../archive
 rsyncArgs = --append  
  
 [Axis]
-axis = E GP GU H JE K KD Q QR T TA  Z ZR
+axis = E GP GU H JE K KD Q QR T TA  X XR
 E_name = Voltage
 E_unit = V
 GP_name = Position
@@ -55,10 +55,10 @@ T_range = -50 100
 TA_name = Temperature 
 TA_unit = K
 TA_range = 0 400
-Z_name = Data
-Z_unit = Byte
-ZR_name = Data
-ZR_unit = %
+X_name = Data
+X_unit = Byte
+XR_name = Data
+XR_unit = %
 
 
 ; First letters: (See sensor naming convention)
