Added code for reading time series data from Ceilometer NetCDF file
modified:   src/kitcube-devices/ceilometer.cpp
modified:   src/kitcube-devices/ceilometer.h
	- added code for reading all time series data from a NetCDF file
	  automatically and
	- commented getFileNumber function out,
	  using standard version from base class instead, which returns date
	  part of file name as index here

modified:   etc/kitcube.ini
	added new group for Ceilometer NetCDF file

modified:   src/kitcube-data/Makefile.am
modified:   src/kitcube-devices/Makefile.am
modified:   src/kitcube-reader/Makefile.am
	added NetCDF libraries to linker arguments

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -176,6 +176,17 @@ sensorList = 20090625.chm.sensors
 datafileTemplate = 20090625.chm.template
 samplingTime = 1 sec
 
+[Ceilometer-nc]
+moduleType = Ceilometer
+moduleNumber = 20
+moduleName = Ceilometer
+moduleComment = Ceilometer
+sensorGroup = nc
+;sensorList = 20090625.chm.sensors
+;datafileTemplate = 20090625.chm.template
+datafileMask = <index>_FZK_Messwiese_16.nc
+samplingTime = 1 sec
+
 [Ceilometer-dat]
 moduleType = Ceilometer
 moduleNumber = 23
