--- a/src/kitcube-reader/Makefile.am
+++ b/src/kitcube-reader/Makefile.am
@@ -1,4 +1,4 @@
-# Makfile.am 
+# Makfile.am
 #
 #
 
@@ -10,16 +10,17 @@ MYSQL_TARGETS = kitcube-reader-mysql
 endif
 
 
-bin_PROGRAMS = kitcube-reader $(MYSQL_TARGETS) 
+bin_PROGRAMS = kitcube-reader $(MYSQL_TARGETS)
 kitcube_reader_SOURCES = kitcube-reader.cpp \
-	reader.h reader.cpp 
+			reader.h reader.cpp
 
 # set the include path found by configure
 INCLUDES= $(all_includes)
 
 
 # the library search path.
-kitcube_reader_LDFLAGS = $(all_libraries)  -L../kitcube-devices -L../akutil  -lkitcube-devices  -lakutil $(ICONV_LIBS)
+kitcube_reader_LDFLAGS = $(all_libraries)  -L../kitcube-devices -L../akutil \
+			-lkitcube-devices  -lakutil $(ICONV_LIBS) -lnetcdf -lnetcdf_c++
 
 
 if USE_MYSQL
@@ -27,7 +28,6 @@ kitcube_reader_mysql_SOURCES = $(kitcube_reader_SOURCES)
 
 kitcube_reader_mysql_CXXFLAGS = -DUSE_MYSQL
 
-kitcube_reader_mysql_LDFLAGS = $(all_libraries) $(MYSQL_LIBS) -L../kitcube-devices -L../akutil  -lkitcube-devices-mysql  -lakutil $(ICONV_LIBS)
+kitcube_reader_mysql_LDFLAGS = $(all_libraries) $(MYSQL_LIBS) -L../kitcube-devices -L../akutil \
+				-lkitcube-devices-mysql  -lakutil $(ICONV_LIBS) -lnetcdf -lnetcdf_c++
 endif
- 
-
