Added some sonsors and sensor list file for Ceilometer NetCDF file

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -32,7 +32,7 @@ dbPassword = kitcube
 rsyncArgs = --append
 
 [Axis]
-axis = DA DC DN E FC FH FM FV GI H KD KM LA MA MR MS N NF NO PA QR R T TA V VD X XR Z
+axis = DA DC DN E FC FH FM FV GI H KD KH KM KMS LA MA MR MS N NF NO PA QR R T TA V VD X XR Z
 DA_name = Density_(Air)
 DA_unit = kg/m^3
 DC_name = Density_(CO2)
@@ -55,8 +55,12 @@ H_name = Heigth
 H_unit = m
 KD_name = Duration
 KD_unit = s
+KH_name = Duration
+KH_unit = h
 KM_name = Duration
 KM_unit = min
+KMS_name = Duration
+KMS_unit = ms
 LA_name = Lambda
 LA_unit = 1/mm
 MA_name = Absolute_Humidity
@@ -182,10 +186,10 @@ moduleNumber = 20
 moduleName = Ceilometer
 moduleComment = Ceilometer
 sensorGroup = nc
-;sensorList = 20090625.chm.sensors
+sensorList = ceilometer.nc.sensors
 ;datafileTemplate = 20090625.chm.template
 datafileMask = <index>_FZK_Messwiese_16.nc
-samplingTime = 1 sec
+samplingTime = 1 min
 
 [Ceilometer-dat]
 moduleType = Ceilometer
