Added new sensor group for JWD and renamed old *.sensors file

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -221,7 +221,18 @@ moduleNumber = 25
 moduleType = JWD
 moduleComment = Distrometer
 sensorGroup = dd
-sensorList = jwd.sensors
+sensorList = jwd.dd.sensors
 datafileTemplate = dd090826.template
 datafileMask = dd<index>
+samplingTime = 1 min
+
+[JWD-rd]
+moduleName = JWD
+moduleNumber = 25
+moduleType = JWD
+moduleComment = Distrometer
+sensorGroup = rd
+sensorList = jwd.rd.sensors
+datafileTemplate = rd090826.template
+datafileMask = rd<index>
 samplingTime = 1 min
