--- a/src/kitcube-devices/Makefile.am
+++ b/src/kitcube-devices/Makefile.am
@@ -11,7 +11,7 @@ endif
 lib_LIBRARIES = libkitcube-devices.a  $(MYSQL_TARGETS)
 
 libkitcube_devices_a_SOURCES = daqdevice.h daqdevice.cpp createdevice.h createdevice.cpp \
-	daqbinarydevice.h daqbinarydevice.cpp \
+	daqbinarydevice.h daqbinarydevice.cpp daqasciidevice.h daqasciidevice.cpp \
 	simrandom.h simrandom.cpp mast.h mast.cpp ceilometer.h ceilometer.cpp \
 	norbert.h norbert.cpp jwd.h jwd.cpp \
 	syslog.h syslog.cpp lara.h lara.cpp
