forgot kitcube.ini with previous commit

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -236,3 +236,14 @@ sensorList = jwd.rd.sensors
 datafileTemplate = rd090826.template
 datafileMask = rd<index>
 samplingTime = 1 min
+
+[Parsivel]
+moduleName = Parsivel
+moduleNumber = 30
+moduleType = Parsivel
+moduleComment = Parsivel comment
+sensorGroup = dat
+sensorList = parsivel.dat.sensors
+datafileTemplate = p090813.dat.template
+datafileMask = p<index>.dat
+samplingTime = 1 min
