Add "Mikro Regen Radar" (MRR) to kitcube-tools
writes and syncs int01_090824.dat type files

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -241,9 +241,20 @@ samplingTime = 1 min
 moduleName = Parsivel
 moduleNumber = 30
 moduleType = Parsivel
-moduleComment = Parsivel comment
+moduleComment = Parsivel_comment
 sensorGroup = dat
 sensorList = parsivel.dat.sensors
 datafileTemplate = p090813.dat.template
 datafileMask = p<index>.dat
+samplingTime = 1 min
+
+[MRR]
+moduleName = MRR_n
+moduleNumber = 35
+moduleType = MRR_t
+moduleComment = Mikro_Regen_Radar
+sensorGroup = dat
+sensorList = mrr.dat.sensors
+datafileTemplate = int01_090824.dat.template
+datafileMask = int01_<index>.dat
 samplingTime = 1 min
