added handling of pasivel type files to MRR

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -258,3 +258,14 @@ sensorList = mrr.dat.sensors
 datafileTemplate = int01_090824.dat.template
 datafileMask = int01_<index>.dat
 samplingTime = 1 min
+
+[MRR-pars]
+moduleName = MRR_n
+moduleNumber = 35
+moduleType = Parsivel
+moduleComment = Mikro_Regen_Radar
+sensorGroup = dat
+sensorList = mrr.dat.sensors
+datafileTemplate = p090826.dat.template
+datafileMask = p<index>.dat
+samplingTime = 1 min
