make getDataFilename global

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -176,8 +176,9 @@ moduleNumber = 20
 moduleName = Ceilometer
 moduleComment = Ceilometer
 sensorGroup = chm
-sensorList = 20090625.chm.sensors
+datafileMask = 20<index>.chm
 datafileTemplate = 20090625.chm.template
+sensorList = 20090625.chm.sensors
 samplingTime = 1 sec
 
 [Ceilometer-nc]
