--- a/src/kitcube-data/Makefile.am
+++ b/src/kitcube-data/Makefile.am
@@ -13,5 +13,5 @@ kitcube_data_SOURCES = kitcube-data.cpp \
 INCLUDES= $(all_includes)
 
 # the library search path.
-kitcube_data_LDFLAGS = $(all_libraries) $(MYSQL_LIBS) -L../akutil -L../kitcube-devices \
+kitcube_data_LDFLAGS = $(all_libraries) $(MYSQL_LIBS) -L../../fdhwlib/src/akutil -L../kitcube-devices \
 			-lkitcube-devices -lakutil $(ICONV_LIBS) -lnetcdf -lnetcdf_c++
