--- a/etc/Makefile.am
+++ b/etc/Makefile.am
@@ -2,10 +2,17 @@
 #
 
 
-EXTRA_DIST = kitcube.ini kitcube-data.ipepdvadei kitcube-reader.ipepdvadei \
+EXTRA_DIST = kitcube.ini kitcube.ini.kitcube \
+	kitcube-data.ipepdvadei kitcube-reader.ipepdvadei \
 	M12_01.DAR.template M12_01.DAX.template \
 	M01_01.DAR.sensors M01_01.DAX.sensors \
 	20090625.chm.sensors 20090625.chm.template \
 	norbert.dat.template norbert.dat.sensors \
+	dd090826.template jwd.dd.sensors \
+	rd090826.template jwd.rd.sensors \
+	p090813.dat.template \
+	int01_090824.dat.template \
+	p090826.dat.template \
+	SysLog.sensors \
 	katrin.ini \
 	Lara.run.sensors Lara.stab.sensors Lara.stab.template
