added copying of NetCDF file for Ceilometer - maybe this works for other modules, too

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -188,8 +188,8 @@ moduleName = Ceilometer
 moduleComment = Ceilometer
 sensorGroup = nc
 sensorList = ceilometer.nc.sensors
-;datafileTemplate = 20090625.chm.template
-datafileMask = <index>_FZK_Messwiese_16.nc
+datafileTemplate = 20090625_FZK_Messwiese_16.nc
+datafileMask = 20<index>_FZK_Messwiese_16.nc
 samplingTime = 1 min
 
 [Ceilometer-dat]
