added missing data file type groups for Mast12

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -140,27 +140,39 @@ sensorList = M01_01.DAR.sensors
 
 
 ; Sampling rate 20Hz
-[Mast12-fast]
+[Mast12-das]
 moduleType = Mast
-; Sampling rate 1Hz
-[Mast12-slow]
-moduleType = Mast
+moduleNumber = 12
+moduleName = EB2
+moduleComment = Energy_balance_station_2
+sensorGroup = DAS
+sensorList = M01_01.DAS.sensors
+datafileTemplate = M12_01.DAS.template
 
+; Sampling rate 1Hz
+[Mast12-dal]
+moduleType = Mast
+moduleNumber = 12
+moduleName = EB2
+moduleComment = Energy_balance_station_2
+sensorGroup = DAL
+sensorList = M01_01.DAL.sensors
+datafileTemplate = M12_01.DAL.template
 
 ; Mean data of 10min intervals
-[Mast12-mean] ; --> moduleName !!!
+[Mast12-dar]
 moduleType = Mast
 moduleNumber = 12
 moduleName = EB2
 moduleComment = Energy_balance_station_2
 sensorGroup = DAR
 sensorList = M01_01.DAR.sensors
-datafileTemplate = M12_01.DAR.template 
-;datafileTemplate = Mast-Output
+datafileTemplate = M12_01.DAR.template
+
 
 
 ; Caclulated values also in a 10 min interval
-[Mast12-calc]
+[Mast12-dax]
 moduleType = Mast
 moduleNumber = 12
 moduleName = EB2
