Added Regenwippe (complete, I hope)

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -282,3 +282,14 @@ sensorList = mrr.dat.sensors
 datafileTemplate = p090826.dat.template
 datafileMask = p<index>.dat
 samplingTime = 1 min
+
+[Regenwippe]
+moduleName = Regenwippe_name
+moduleNumber = 40
+moduleType = Regenwippe
+moduleComment = Regenwippe_comment
+sensorGroup = dat
+sensorList = regenwippe.dat.sensors
+datafileTemplate = w20090826.dat.template
+datafileMask = w20<index>.dat
+samplingTime = 1 min
