Updated and added EB Mast configs

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -114,30 +114,60 @@ Z_unit = dB
 ;
 
 
-[Mast01]
-moduleType = Mast
-moduleNumber = 1
-datafileTemplate = M12_01.DAR.template
+; Energie Bilanz Mast 1
 
-
-[Mast01-mean]
-moduleType = Mast
-moduleNumber = 11
-moduleName = T01
-moduleComment = Turbulence_station_1
-datafileTemplate = M12_01.DAR.template
-sensorList = M01_01.DAR.sensors
-
-
-
-[Mast11-mean]
+; Sampling rate 20Hz
+[Mast11-das]
 moduleType = Mast
 moduleNumber = 11
 moduleName = EB1
 moduleComment = Energy_balance_station_1
-datafileTemplate = M12_01.DAR.template
-sensorList = M01_01.DAR.sensors
+sensorGroup = DAS
+datafileMask = M11_<index>.DAS
+sensorList = EB1.DAS.sensors
+datafileTemplate = M11_01.DAS.template
+samplingTime = 0.05 sec
 
+
+; Sampling rate 1Hz
+[Mast11-dal]
+moduleType = Mast
+moduleNumber = 11
+moduleName = EB1
+moduleComment = Energy_balance_station_1
+sensorGroup = DAL
+datafileMask = M11_<index>.DAL
+sensorList = EB1.DAL.sensors
+datafileTemplate = M11_01.DAL.template
+samplingTime = 1 sec
+
+; Mean data of 10min intervals
+[Mast11-dar]
+moduleType = Mast
+moduleNumber = 11
+moduleName = EB1
+moduleComment = Energy_balance_station_1
+sensorGroup = DAR
+datafileMask = M11_<index>.DAR
+sensorList = EB1.DAR.sensors
+datafileTemplate = M11_01.DAR.template
+samplingTime = 10 min
+
+
+; Caclulated values also in a 10 min interval
+[Mast11-dax]
+moduleType = Mast
+moduleNumber = 11
+moduleName = EB1
+moduleComment = Energy_balance_station_1
+sensorGroup = DAX
+datafileMask = M11_<index>.DAX
+sensorList = EB1.DAX.sensors
+datafileTemplate = M11_01.DAX.template
+samplingTime = 10 min
+
+
+; Energie Bilanz Mast 2
 
 ; Sampling rate 20Hz
 [Mast12-das]
@@ -146,8 +176,11 @@ moduleNumber = 12
 moduleName = EB2
 moduleComment = Energy_balance_station_2
 sensorGroup = DAS
-sensorList = M01_01.DAS.sensors
+datafileMask = M12_<index>.DAS
+sensorList = EB2.DAS.sensors
 datafileTemplate = M12_01.DAS.template
+samplingTime = 0.05 sec
+
 
 ; Sampling rate 1Hz
 [Mast12-dal]
@@ -156,8 +189,10 @@ moduleNumber = 12
 moduleName = EB2
 moduleComment = Energy_balance_station_2
 sensorGroup = DAL
-sensorList = M01_01.DAL.sensors
+datafileMask = M12_<index>.DAL
+sensorList = EB2.DAL.sensors
 datafileTemplate = M12_01.DAL.template
+samplingTime = 1 sec
 
 ; Mean data of 10min intervals
 [Mast12-dar]
@@ -166,9 +201,10 @@ moduleNumber = 12
 moduleName = EB2
 moduleComment = Energy_balance_station_2
 sensorGroup = DAR
-sensorList = M01_01.DAR.sensors
+datafileMask = M12_<index>.DAR
+sensorList = EB2.DAR.sensors
 datafileTemplate = M12_01.DAR.template
-
+samplingTime = 10 min
 
 
 ; Caclulated values also in a 10 min interval
@@ -178,8 +214,10 @@ moduleNumber = 12
 moduleName = EB2
 moduleComment = Energy_balance_station_2
 sensorGroup = DAX
-sensorList = M01_01.DAX.sensors
+datafileMask = M12_<index>.DAX
+sensorList = EB2.DAX.sensors
 datafileTemplate = M12_01.DAX.template
+samplingTime = 10 min
 
 
 [Ceilometer]
