--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -322,7 +322,7 @@ datafileMask = p<index>.dat
 samplingTime = 1 min
 
 [Regenwippe]
-moduleName = Regenwippe_name
+moduleName = Regenwippe
 moduleNumber = 40
 moduleType = Regenwippe
 moduleComment = Regenwippe_comment
@@ -330,4 +330,15 @@ sensorGroup = dat
 sensorList = regenwippe.dat.sensors
 datafileTemplate = w20090826.dat.template
 datafileMask = w20<index>.dat
+samplingTime = 1 min
+
+[Wolkenkamera]
+moduleName = Wolkenkamera
+moduleNumber = 45
+moduleType = Wolkenkamera
+moduleComment = Wolkenkamera_comment
+sensorGroup = jpg
+sensorList = wolkenkamera.jpg.sensors
+datafileTemplate = 200908261200.jpg.template
+datafileMask = 20<index>.jpg
 samplingTime = 1 min
