added axis: rain intensity in mm/s

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -32,7 +32,7 @@ dbPassword = kitcube
 rsyncArgs = --append
 
 [Axis]
-axis = DA DC DN E FC FH FM FV GI H KD KH KM KMS LA MA MR MS N NF NO PA QR R T TA V VD X XR Z
+axis = DA DC DN E FC FH FM FV GI H KD KH KM KMS LA MA MR MS N NE NF NO PA QR R T TA V VD X XR Z
 DA_name = Density_(Air)
 DA_unit = kg/m^3
 DC_name = Density_(CO2)
@@ -71,6 +71,8 @@ MS_name = Specific_humidity
 MS_unit = g/kg
 N_name = Percipitation
 N_unit = mm
+NE_name = Percipitation_rate
+NE_unit = mm/s
 NF_name = Percipitation_rate
 NF_unit = mm/h
 NO_name = No_Unit
@@ -128,7 +130,6 @@ sensorList = EB1.DAS.sensors
 datafileTemplate = M11_01.DAS.template
 samplingTime = 0.05 sec
 
-
 ; Sampling rate 1Hz
 [Mast11-dal]
 moduleName = EB1
@@ -152,7 +153,6 @@ datafileMask = M11_<index>.DAR
 sensorList = EB1.DAR.sensors
 datafileTemplate = M11_01.DAR.template
 samplingTime = 10 min
-
 
 ; Caclulated values also in a 10 min interval
 [Mast11-dax]
@@ -181,7 +181,6 @@ sensorList = EB2.DAS.sensors
 datafileTemplate = M12_01.DAS.template
 samplingTime = 0.05 sec
 
-
 ; Sampling rate 1Hz
 [Mast12-dal]
 moduleName = EB2
@@ -205,7 +204,6 @@ datafileMask = M12_<index>.DAR
 sensorList = EB2.DAR.sensors
 datafileTemplate = M12_01.DAR.template
 samplingTime = 10 min
-
 
 ; Caclulated values also in a 10 min interval
 [Mast12-dax]
