Update of SysLog and debug messages

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -32,7 +32,7 @@ archiveDir = ../../../archive
 rsyncArgs = --append  
  
 [Axis]
-axis = DA DC E FC FH FM FV GI H KD MA MR MS N NF PA QR R T TA V VD Z ZR 
+axis = DA DC E FC FH FM FV GI H KD MA MR MS N NF PA QR R T TA V VD Z ZG ZP ZR 
 DA_name = Density_(Air)
 DA_unit = kg/m^3
 DC_name = Density_(CO2)
@@ -52,7 +52,7 @@ GI_unit = grad
 H_name = Heigth
 H_unit = m
 KD_name = Duration
-KD_unit = s
+KD_unit = ms
 MA_name = Absolute_Humidity
 MA_unit = g/m^3
 MR_name = Relative_Humidity
@@ -81,8 +81,13 @@ VD_name = Wind_direction
 VD_unit = grad
 Z_name = Data
 Z_unit = Byte
-ZR_name = Data
-ZR_unit = %
+ZG_name = Data
+ZG_unit = GByte
+ZP_name = Data
+ZP_unit = %
+ZR_name = Data_rate
+ZR_unit = MB/s
+
 
 ; First letters: (See sensor naming convention)
 ;
