--- a/etc/Makefile.am
+++ b/etc/Makefile.am
@@ -6,7 +6,8 @@ EXTRA_DIST = kitcube.ini kitcube-data.ipepdvadei kitcube-reader.ipepdvadei \
 	M12_01.DAR.template M12_01.DAX.template \
 	M01_01.DAR.sensors M01_01.DAX.sensors \
 	20090625.chm.sensors 20090625.chm.template \
-	katrin.ini \
+	SimRandom.sensors SysLog.sensors \
+	katrin.ini SysLog.katrin.sensors \
 	Lara.run.sensors Lara.stab.sensors Lara.stab.template
 	
 	
