--- a/etc/Makefile.am
+++ b/etc/Makefile.am
@@ -5,8 +5,9 @@
 EXTRA_DIST = kitcube.ini kitcube.ini.kitcube \
 	kitcube-data.ipepdvadei kitcube-reader.ipepdvadei \
 	M12_01.DAR.template M12_01.DAX.template \
-	M01_01.DAR.sensors M01_01.DAX.sensors \
-	20090625.chm.sensors 20090625.chm.template \
+	EB1.DAS.sensors EB1.DAL.sensors EB1.DAR.sensors EB1.DAX.sensors \
+	EB2.DAS.sensors EB2.DAL.sensors EB2.DAR.sensors EB2.DAX.sensors \
+	20090625.chm.sensors ceilometer.nc.sensors 20090625.chm.template \
 	norbert.dat.template norbert.dat.sensors \
 	dd090826.template jwd.dd.sensors \
 	rd090826.template jwd.rd.sensors \
