--- a/etc/Makefile.am
+++ b/etc/Makefile.am
@@ -4,6 +4,7 @@
 
 EXTRA_DIST = kitcube.ini kitcube.ini.kitcube \
 	kitcube-data.ipepdvadei kitcube-reader.ipepdvadei \
+	T06.DAS.sensors T06.DAL.sensors T06.DAR.sensors T06.DAX.sensors \
 	M12_01.DAR.template M12_01.DAX.template \
 	EB1.DAS.sensors EB1.DAL.sensors EB1.DAR.sensors EB1.DAX.sensors \
 	EB2.DAS.sensors EB2.DAL.sensors EB2.DAR.sensors EB2.DAX.sensors \
