add config for turbulence Mast 06

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -104,7 +104,6 @@ XR_unit = MB/s
 Z_name = Reflectivity
 Z_unit = dB
 
-
 ; First letters: (See sensor naming convention)
 ;
 
@@ -119,6 +118,57 @@ Z_unit = dB
 ;
 ; Definition of modules that can be used by the module parameter of the applications
 ;
+
+
+; Turbulence Mast 6
+
+; Sampling rate 20Hz
+[Mast6-das]
+moduleName = T06
+moduleNumber = 6
+moduleType = Mast
+moduleComment = Turbulence_mast_6
+sensorGroup = DAS
+datafileMask = M11_<index>.DAS
+sensorList = T06.DAS.sensors
+datafileTemplate = M11_01.DAS.template
+samplingTime = 0.05 sec
+
+; Sampling rate 1Hz
+[Mast6-dal]
+moduleName = T06
+moduleNumber = 6
+moduleType = Mast
+moduleComment = Turbulence_mast_6
+sensorGroup = DAL
+datafileMask = M11_<index>.DAL
+sensorList = T06.DAL.sensors
+datafileTemplate = M11_01.DAL.template
+samplingTime = 1 sec
+
+; Mean data of 10min intervals
+[Mast6-dar]
+moduleName = T06
+moduleNumber = 6
+moduleType = Mast
+moduleComment = Turbulence_mast_6
+sensorGroup = DAR
+datafileMask = M11_<index>.DAR
+sensorList = T06.DAR.sensors
+datafileTemplate = M11_01.DAR.template
+samplingTime = 10 min
+
+; Caclulated values also in a 10 min interval
+[Mast6-dax]
+moduleName = T06
+moduleNumber = 6
+moduleType = Mast
+moduleComment = Turbulence_mast_6
+sensorGroup = DAX
+datafileMask = M11_<index>.DAX
+sensorList = T06.DAX.sensors
+datafileTemplate = M11_01.DAX.template
+samplingTime = 10 min
 
 
 ; Energie Bilanz Mast 1
