--- a/etc/Makefile.am
+++ b/etc/Makefile.am
@@ -4,7 +4,13 @@
 
 EXTRA_DIST = kitcube.ini kitcube.ini.kitcube \
 	kitcube-data.ipepdvadei kitcube-reader.ipepdvadei \
+	T01.DAS.sensors T01.DAL.sensors T01.DAR.sensors T01.DAX.sensors \
+	T02.DAS.sensors T02.DAL.sensors T02.DAR.sensors T02.DAX.sensors \
+	T03.DAS.sensors T03.DAL.sensors T03.DAR.sensors T03.DAX.sensors \
+	T04.DAS.sensors T04.DAL.sensors T04.DAR.sensors T04.DAX.sensors \
+	T05.DAS.sensors T05.DAL.sensors T05.DAR.sensors T05.DAX.sensors \
 	T06.DAS.sensors T06.DAL.sensors T06.DAR.sensors T06.DAX.sensors \
+	T07.DAS.sensors T07.DAL.sensors T07.DAR.sensors T07.DAX.sensors \
 	M12_01.DAR.template M12_01.DAX.template \
 	EB1.DAS.sensors EB1.DAL.sensors EB1.DAR.sensors EB1.DAX.sensors \
 	EB2.DAS.sensors EB2.DAL.sensors EB2.DAR.sensors EB2.DAX.sensors \
