fixed axis names

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -69,11 +69,11 @@ MR_name = Relative_Humidity
 MR_unit = %
 MS_name = Specific_humidity
 MS_unit = g/kg
-N_name = Percipitation
+N_name = Precipitation
 N_unit = mm
-NE_name = Percipitation_rate
+NE_name = Precipitation_rate
 NE_unit = mm/s
-NF_name = Percipitation_rate
+NF_name = Precipitation_rate
 NF_unit = mm/h
 NO_name = No_Unit
 NO_unit = 
