fix data file masks for EB1

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -15,7 +15,7 @@ module = Mast12-calc
 ;module = Mast12-calc
 module = Simulation
 ;samplingTime = 1 min
-samplingTime = 5 sec
+samplingTime = 15 sec
 
 
 ; Global parameters for the whole setup related to the
@@ -180,7 +180,7 @@ moduleNumber = 11
 moduleType = Mast
 moduleComment = Energy_balance_station_1
 sensorGroup = DAS
-datafileMask = M11_<index>.DAS
+datafileMask = messwiese<index>.DAS
 sensorList = EB1.DAS.sensors
 datafileTemplate = M11_01.DAS.template
 samplingTime = 0.05 sec
@@ -192,7 +192,7 @@ moduleNumber = 11
 moduleType = Mast
 moduleComment = Energy_balance_station_1
 sensorGroup = DAL
-datafileMask = M11_<index>.DAL
+datafileMask = messwiese<index>.DAL
 sensorList = EB1.DAL.sensors
 datafileTemplate = M11_01.DAL.template
 samplingTime = 1 sec
@@ -204,7 +204,7 @@ moduleNumber = 11
 moduleType = Mast
 moduleComment = Energy_balance_station_1
 sensorGroup = DAR
-datafileMask = M11_<index>.DAR
+datafileMask = messwiese<index>.DAR
 sensorList = EB1.DAR.sensors
 datafileTemplate = M11_01.DAR.template
 samplingTime = 10 min
@@ -216,7 +216,7 @@ moduleNumber = 11
 moduleType = Mast
 moduleComment = Energy_balance_station_1
 sensorGroup = DAX
-datafileMask = M11_<index>.DAX
+datafileMask = messwiese<index>.DAX
 sensorList = EB1.DAX.sensors
 datafileTemplate = M11_01.DAX.template
 samplingTime = 10 min
