--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -15,7 +15,7 @@ module = Mast12-calc
 ;module = Mast12-calc
 module = Simulation
 ;samplingTime = 1 min
-samplingTime = 15 sec
+samplingTime = 5 sec
 
 
 ; Global parameters for the whole setup related to the
@@ -32,7 +32,13 @@ dbPassword = kitcube
 rsyncArgs = --append
 
 [Axis]
-axis = DA DC DN E FC FH FM FV GI H KD KH KM KMS LA MA MR MS N NE NF NO PA QR R T TA V VD X XG XP XR Z
+axis = A B C DA DC DN E FC FH FM FV GI H KD KED KH KM KMS L LA MA MF MR MS N NE NF NO PA QR R T TA V VD X XG XP XR Z
+A_name = sfcorif
+A_unit = 10^(-12)/m^(2/3)
+B_name = sfcotf
+B_unit = K^2/m^(2/3)
+C_name = isorif
+C_unit = mm
 DA_name = Density_(Air)
 DA_unit = kg/m^3
 DC_name = Density_(CO2)
@@ -55,16 +61,22 @@ H_name = Heigth
 H_unit = m
 KD_name = Duration
 KD_unit = s
+KED_name = Kinetic_Energy_Dissipation
+KED_unit = m^2/s^3
 KH_name = Duration
 KH_unit = h
 KM_name = Duration
 KM_unit = min
 KMS_name = Duration
 KMS_unit = ms
+L_name = Lenght
+L_unit = m
 LA_name = Lambda
 LA_unit = 1/mm
 MA_name = Absolute_Humidity
 MA_unit = g/m^3
+MF_name = Momentum_Flux
+MF_unit = N/m^2
 MR_name = Relative_Humidity
 MR_unit = %
 MS_name = Specific_humidity
@@ -394,4 +406,15 @@ sensorGroup = jpg
 sensorList = wolkenkamera.jpg.sensors
 datafileTemplate = 200908261200.jpg.template
 datafileMask = 20<index>.jpg
+samplingTime = 1 min
+
+[SZI]
+moduleName = Szintillometer
+moduleNumber = 50
+moduleType = Szintillometer
+moduleComment = SZI_comment
+sensorGroup = RES
+sensorList = szintillometer.RES.sensors
+datafileTemplate = 100727.RES.template
+datafileMask = <index>.RES
 samplingTime = 1 min
