--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -132,6 +132,261 @@ Z_unit = dB
 ;
 
 
+; Turbulence Mast 1
+
+; Sampling rate 20Hz
+[Mast1-das]
+moduleName = T01
+moduleNumber = 1
+moduleType = Mast
+moduleComment = Turbulence_mast_1
+sensorGroup = DAS
+datafileMask = messwiese<index>.DAS
+sensorList = T01.DAS.sensors
+datafileTemplate = M11_01.DAS.template
+samplingTime = 0.05 sec
+
+; Sampling rate 1Hz
+[Mast1-dal]
+moduleName = T01
+moduleNumber = 1
+moduleType = Mast
+moduleComment = Turbulence_mast_1
+sensorGroup = DAL
+datafileMask = messwiese<index>.DAL
+sensorList = T01.DAL.sensors
+datafileTemplate = M11_01.DAL.template
+samplingTime = 1 sec
+
+; Mean data of 10min intervals
+[Mast1-dar]
+moduleName = T01
+moduleNumber = 1
+moduleType = Mast
+moduleComment = Turbulence_mast_1
+sensorGroup = DAR
+datafileMask = messwiese<index>.DAR
+sensorList = T01.DAR.sensors
+datafileTemplate = M11_01.DAR.template
+samplingTime = 10 min
+
+; Caclulated values also in a 10 min interval
+[Mast1-dax]
+moduleName = T01
+moduleNumber = 1
+moduleType = Mast
+moduleComment = Turbulence_mast_1
+sensorGroup = DAX
+datafileMask = messwiese<index>.DAX
+sensorList = T01.DAX.sensors
+datafileTemplate = M11_01.DAX.template
+samplingTime = 10 min
+
+
+; Turbulence Mast 2
+
+; Sampling rate 20Hz
+[Mast2-das]
+moduleName = T02
+moduleNumber = 2
+moduleType = Mast
+moduleComment = Turbulence_mast_2
+sensorGroup = DAS
+datafileMask = messwiese<index>.DAS
+sensorList = T02.DAS.sensors
+datafileTemplate = M11_01.DAS.template
+samplingTime = 0.05 sec
+
+; Sampling rate 1Hz
+[Mast2-dal]
+moduleName = T02
+moduleNumber = 2
+moduleType = Mast
+moduleComment = Turbulence_mast_2
+sensorGroup = DAL
+datafileMask = messwiese<index>.DAL
+sensorList = T02.DAL.sensors
+datafileTemplate = M11_01.DAL.template
+samplingTime = 1 sec
+
+; Mean data of 10min intervals
+[Mast2-dar]
+moduleName = T02
+moduleNumber = 2
+moduleType = Mast
+moduleComment = Turbulence_mast_2
+sensorGroup = DAR
+datafileMask = messwiese<index>.DAR
+sensorList = T02.DAR.sensors
+datafileTemplate = M11_01.DAR.template
+samplingTime = 10 min
+
+; Caclulated values also in a 10 min interval
+[Mast2-dax]
+moduleName = T02
+moduleNumber = 2
+moduleType = Mast
+moduleComment = Turbulence_mast_2
+sensorGroup = DAX
+datafileMask = messwiese<index>.DAX
+sensorList = T02.DAX.sensors
+datafileTemplate = M11_01.DAX.template
+samplingTime = 10 min
+
+
+; Turbulence Mast 3
+
+; Sampling rate 20Hz
+[Mast3-das]
+moduleName = T03
+moduleNumber = 3
+moduleType = Mast
+moduleComment = Turbulence_mast_3
+sensorGroup = DAS
+datafileMask = messwiese<index>.DAS
+sensorList = T03.DAS.sensors
+datafileTemplate = M11_01.DAS.template
+samplingTime = 0.05 sec
+
+; Sampling rate 1Hz
+[Mast3-dal]
+moduleName = T03
+moduleNumber = 3
+moduleType = Mast
+moduleComment = Turbulence_mast_3
+sensorGroup = DAL
+datafileMask = messwiese<index>.DAL
+sensorList = T03.DAL.sensors
+datafileTemplate = M11_01.DAL.template
+samplingTime = 1 sec
+
+; Mean data of 10min intervals
+[Mast3-dar]
+moduleName = T03
+moduleNumber = 3
+moduleType = Mast
+moduleComment = Turbulence_mast_3
+sensorGroup = DAR
+datafileMask = messwiese<index>.DAR
+sensorList = T03.DAR.sensors
+datafileTemplate = M11_01.DAR.template
+samplingTime = 10 min
+
+; Caclulated values also in a 10 min interval
+[Mast3-dax]
+moduleName = T03
+moduleNumber = 3
+moduleType = Mast
+moduleComment = Turbulence_mast_3
+sensorGroup = DAX
+datafileMask = messwiese<index>.DAX
+sensorList = T03.DAX.sensors
+datafileTemplate = M11_01.DAX.template
+samplingTime = 10 min
+
+
+; Turbulence Mast 4
+
+; Sampling rate 20Hz
+[Mast4-das]
+moduleName = T04
+moduleNumber = 4
+moduleType = Mast
+moduleComment = Turbulence_mast_4
+sensorGroup = DAS
+datafileMask = messwiese<index>.DAS
+sensorList = T04.DAS.sensors
+datafileTemplate = M11_01.DAS.template
+samplingTime = 0.05 sec
+
+; Sampling rate 1Hz
+[Mast4-dal]
+moduleName = T04
+moduleNumber = 4
+moduleType = Mast
+moduleComment = Turbulence_mast_4
+sensorGroup = DAL
+datafileMask = messwiese<index>.DAL
+sensorList = T04.DAL.sensors
+datafileTemplate = M11_01.DAL.template
+samplingTime = 1 sec
+
+; Mean data of 10min intervals
+[Mast4-dar]
+moduleName = T04
+moduleNumber = 4
+moduleType = Mast
+moduleComment = Turbulence_mast_4
+sensorGroup = DAR
+datafileMask = messwiese<index>.DAR
+sensorList = T04.DAR.sensors
+datafileTemplate = M11_01.DAR.template
+samplingTime = 10 min
+
+; Caclulated values also in a 10 min interval
+[Mast4-dax]
+moduleName = T04
+moduleNumber = 4
+moduleType = Mast
+moduleComment = Turbulence_mast_4
+sensorGroup = DAX
+datafileMask = messwiese<index>.DAX
+sensorList = T04.DAX.sensors
+datafileTemplate = M11_01.DAX.template
+samplingTime = 10 min
+
+
+; Turbulence Mast 5
+
+; Sampling rate 20Hz
+[Mast5-das]
+moduleName = T05
+moduleNumber = 5
+moduleType = Mast
+moduleComment = Turbulence_mast_5
+sensorGroup = DAS
+datafileMask = messwiese<index>.DAS
+sensorList = T05.DAS.sensors
+datafileTemplate = M11_01.DAS.template
+samplingTime = 0.05 sec
+
+; Sampling rate 1Hz
+[Mast5-dal]
+moduleName = T05
+moduleNumber = 5
+moduleType = Mast
+moduleComment = Turbulence_mast_5
+sensorGroup = DAL
+datafileMask = messwiese<index>.DAL
+sensorList = T05.DAL.sensors
+datafileTemplate = M11_01.DAL.template
+samplingTime = 1 sec
+
+; Mean data of 10min intervals
+[Mast5-dar]
+moduleName = T05
+moduleNumber = 5
+moduleType = Mast
+moduleComment = Turbulence_mast_5
+sensorGroup = DAR
+datafileMask = messwiese<index>.DAR
+sensorList = T05.DAR.sensors
+datafileTemplate = M11_01.DAR.template
+samplingTime = 10 min
+
+; Caclulated values also in a 10 min interval
+[Mast5-dax]
+moduleName = T05
+moduleNumber = 5
+moduleType = Mast
+moduleComment = Turbulence_mast_5
+sensorGroup = DAX
+datafileMask = messwiese<index>.DAX
+sensorList = T05.DAX.sensors
+datafileTemplate = M11_01.DAX.template
+samplingTime = 10 min
+
+
 ; Turbulence Mast 6
 
 ; Sampling rate 20Hz
@@ -141,7 +396,7 @@ moduleNumber = 6
 moduleType = Mast
 moduleComment = Turbulence_mast_6
 sensorGroup = DAS
-datafileMask = M11_<index>.DAS
+datafileMask = messwiese<index>.DAS
 sensorList = T06.DAS.sensors
 datafileTemplate = M11_01.DAS.template
 samplingTime = 0.05 sec
@@ -153,7 +408,7 @@ moduleNumber = 6
 moduleType = Mast
 moduleComment = Turbulence_mast_6
 sensorGroup = DAL
-datafileMask = M11_<index>.DAL
+datafileMask = messwiese<index>.DAL
 sensorList = T06.DAL.sensors
 datafileTemplate = M11_01.DAL.template
 samplingTime = 1 sec
@@ -165,7 +420,7 @@ moduleNumber = 6
 moduleType = Mast
 moduleComment = Turbulence_mast_6
 sensorGroup = DAR
-datafileMask = M11_<index>.DAR
+datafileMask = messwiese<index>.DAR
 sensorList = T06.DAR.sensors
 datafileTemplate = M11_01.DAR.template
 samplingTime = 10 min
@@ -177,8 +432,59 @@ moduleNumber = 6
 moduleType = Mast
 moduleComment = Turbulence_mast_6
 sensorGroup = DAX
-datafileMask = M11_<index>.DAX
+datafileMask = messwiese<index>.DAX
 sensorList = T06.DAX.sensors
+datafileTemplate = M11_01.DAX.template
+samplingTime = 10 min
+
+
+; Turbulence Mast 7
+
+; Sampling rate 20Hz
+[Mast7-das]
+moduleName = T07
+moduleNumber = 7
+moduleType = Mast
+moduleComment = Turbulence_mast_7
+sensorGroup = DAS
+datafileMask = messwiese<index>.DAS
+sensorList = T07.DAS.sensors
+datafileTemplate = M11_01.DAS.template
+samplingTime = 0.05 sec
+
+; Sampling rate 1Hz
+[Mast7-dal]
+moduleName = T07
+moduleNumber = 7
+moduleType = Mast
+moduleComment = Turbulence_mast_7
+sensorGroup = DAL
+datafileMask = messwiese<index>.DAL
+sensorList = T07.DAL.sensors
+datafileTemplate = M11_01.DAL.template
+samplingTime = 1 sec
+
+; Mean data of 10min intervals
+[Mast7-dar]
+moduleName = T07
+moduleNumber = 7
+moduleType = Mast
+moduleComment = Turbulence_mast_7
+sensorGroup = DAR
+datafileMask = messwiese<index>.DAR
+sensorList = T07.DAR.sensors
+datafileTemplate = M11_01.DAR.template
+samplingTime = 10 min
+
+; Caclulated values also in a 10 min interval
+[Mast7-dax]
+moduleName = T07
+moduleNumber = 7
+moduleType = Mast
+moduleComment = Turbulence_mast_7
+sensorGroup = DAX
+datafileMask = messwiese<index>.DAX
+sensorList = T07.DAX.sensors
 datafileTemplate = M11_01.DAX.template
 samplingTime = 10 min
 
@@ -243,7 +549,7 @@ moduleNumber = 12
 moduleType = Mast
 moduleComment = Energy_balance_station_2
 sensorGroup = DAS
-datafileMask = M12_<index>.DAS
+datafileMask = messwiese<index>.DAS
 sensorList = EB2.DAS.sensors
 datafileTemplate = M12_01.DAS.template
 samplingTime = 0.05 sec
@@ -255,7 +561,7 @@ moduleNumber = 12
 moduleType = Mast
 moduleComment = Energy_balance_station_2
 sensorGroup = DAL
-datafileMask = M12_<index>.DAL
+datafileMask = messwiese<index>.DAL
 sensorList = EB2.DAL.sensors
 datafileTemplate = M12_01.DAL.template
 samplingTime = 1 sec
@@ -267,7 +573,7 @@ moduleNumber = 12
 moduleType = Mast
 moduleComment = Energy_balance_station_2
 sensorGroup = DAR
-datafileMask = M12_<index>.DAR
+datafileMask = messwiese<index>.DAR
 sensorList = EB2.DAR.sensors
 datafileTemplate = M12_01.DAR.template
 samplingTime = 10 min
@@ -279,7 +585,7 @@ moduleNumber = 12
 moduleType = Mast
 moduleComment = Energy_balance_station_2
 sensorGroup = DAX
-datafileMask = M12_<index>.DAX
+datafileMask = messwiese<index>.DAX
 sensorList = EB2.DAX.sensors
 datafileTemplate = M12_01.DAX.template
 samplingTime = 10 min
@@ -408,13 +714,13 @@ datafileTemplate = 200908261200.jpg.template
 datafileMask = 20<index>.jpg
 samplingTime = 1 min
 
-[SZI]
-moduleName = Szintillometer
+[SCI]
+moduleName = SCI
 moduleNumber = 50
-moduleType = Szintillometer
-moduleComment = SZI_comment
+moduleType = Scintillometer
+moduleComment = SCI_comment
 sensorGroup = RES
-sensorList = szintillometer.RES.sensors
+sensorList = scintillometer.RES.sensors
 datafileTemplate = 100727.RES.template
 datafileMask = <index>.RES
 samplingTime = 1 min
