added SCI sensors file

--- a/etc/Makefile.am
+++ b/etc/Makefile.am
@@ -11,7 +11,6 @@ EXTRA_DIST = kitcube.ini kitcube.ini.kitcube \
 	T05.DAS.sensors T05.DAL.sensors T05.DAR.sensors T05.DAX.sensors \
 	T06.DAS.sensors T06.DAL.sensors T06.DAR.sensors T06.DAX.sensors \
 	T07.DAS.sensors T07.DAL.sensors T07.DAR.sensors T07.DAX.sensors \
-	M12_01.DAR.template M12_01.DAX.template \
 	EB1.DAS.sensors EB1.DAL.sensors EB1.DAR.sensors EB1.DAX.sensors \
 	EB2.DAS.sensors EB2.DAL.sensors EB2.DAR.sensors EB2.DAX.sensors \
 	20090625.chm.sensors ceilometer.nc.sensors 20090625.chm.template \
@@ -21,6 +20,7 @@ EXTRA_DIST = kitcube.ini kitcube.ini.kitcube \
 	p090813.dat.template \
 	int01_090824.dat.template \
 	p090826.dat.template \
+	scintillometer.RES.sensors \
 	SimRandom.txt.sensors SysLog.sensors \
 	katrin.ini SysLog.katrin.sensors \
 	Lara.run.sensors Lara.stab.sensors Lara.stab.template
