fixes for wolkenkamera

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -711,8 +711,8 @@ moduleComment = Wolkenkamera_comment
 sensorGroup = jpg
 sensorList = wolkenkamera.jpg.sensors
 datafileTemplate = 200908261200.jpg.template
-datafileMask = 20<index>.jpg
-samplingTime = 1 min
+datafileMask = kitcube_cc2_<index>.jpg
+samplingTime = 2 min
 
 [SCI]
 moduleName = SCI
