add Wind Tracer, can read header and calculate range gates

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -757,3 +757,14 @@ sensorList = 3M.sonic.sensors
 datafileTemplate = data.csv.template
 datafileMask = <index>.sonic.csv
 samplingTime = 0.03125 sec
+
+[WT20]
+moduleName = WT20
+moduleNumber = 60
+moduleType = windtracer
+moduleComment = Windtracer20
+sensorGroup = prd
+datafileMask = 20<index>_134446_base.prd
+sensorList = WT20.sensors
+datafileTemplate = 20090729_134446_base.prd.template
+samplingTime = 10 min
