add sensor list and first try of INSERT of profile data as BLOB

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -32,7 +32,7 @@ dbPassword = kitcube
 rsyncArgs = --append
 
 [Axis]
-axis = A B C DA DC DN E FC FH FM FV GI H KD KED KH KM KMS L LA MA MF MR MS N NE NF NO PA QR R T TA V VD X XG XP XR Z
+axis = A B C DA DC DN E FC FH FM FV GI H KD KED KH KM KMS L LA MA MF MR MS N NE NF NO PA QR R SNR T TA V VD X XG XP XR Z
 A_name = sfcorif
 A_unit = 10^(-12)/m^(2/3)
 B_name = sfcotf
@@ -95,6 +95,8 @@ QR_name = Quality
 QR_unit = %
 R_name = Radiation
 R_unit = W/m^2
+SNR_name = SNR
+SNR_unit = dB
 T_name = Temperature
 T_unit = C
 T_range = -50 100
