--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -766,8 +766,8 @@ moduleNumber = 60
 moduleType = windtracer
 moduleComment = Windtracer20_base
 sensorGroup = base
-datafileMask = 20<index>_134446_base.prd
-sensorList = WT20.sensors
+datafileMask = 20<index>_134349_base.prd
+sensorList = WT20.base.sensors
 datafileTemplate = 20090729_134446_base.prd.template
 samplingTime = 10 min
 
@@ -778,6 +778,6 @@ moduleType = windtracer
 moduleComment = Windtracer20_spectral
 sensorGroup = spectral
 datafileMask = 20<index>_134446_spectral.prd
-sensorList = WT20.sensors
+sensorList = WT20.spectral.sensors
 datafileTemplate = 20090729_134446_base.prd.template
 samplingTime = 10 min
