added GPS device: it compiles but doesn't work correctly yet

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -766,7 +766,7 @@ moduleNumber = 60
 moduleType = windtracer
 moduleComment = Windtracer20_base
 sensorGroup = base
-datafileMask = 20<index>_134349_base.prd
+datafileMask = 20<index>_134446_base.prd
 sensorList = WT20.base.sensors
 datafileTemplate = 20090729_134446_base.prd.template
 samplingTime = 10 min
@@ -781,3 +781,14 @@ datafileMask = 20<index>_134446_spectral.prd
 sensorList = WT20.spectral.sensors
 datafileTemplate = 20090729_134446_base.prd.template
 samplingTime = 10 min
+
+[GPS]
+moduleName = GPS
+moduleNumber = 65
+moduleType = gps
+moduleComment = gps_comment
+sensorGroup = tro
+sensorList = gps.tro.sensors
+datafileTemplate = 100727.RES.template
+datafileMask = kitk<index>.tro
+samplingTime = 15 min
