kitcube.ini: add axis "water column"

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -32,7 +32,7 @@ dbPassword = kitcube
 rsyncArgs = --append
 
 [Axis]
-axis = A B C DA DC DN E FC FH FM FV GI H KD KED KH KM KMS L LA MA MF MR MS N NE NF NO PA QR R SNR T TA V VD X XG XP XR Z
+axis = A B C DA DC DN E FC FH FM FV GI H KD KED KH KM KMS L LA MA MF MR MS MW N NE NF NO PA QR R SNR T TA V VD X XG XP XR Z
 A_name = sfcorif
 A_unit = 10^(-12)/m^(2/3)
 B_name = sfcotf
@@ -81,6 +81,8 @@ MR_name = Relative_Humidity
 MR_unit = %
 MS_name = Specific_humidity
 MS_unit = g/kg
+MW_name = Water_Column
+MW_unit = mm
 N_name = Precipitation
 N_unit = mm
 NE_name = Precipitation_rate
