add SODAR device

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -794,3 +794,14 @@ sensorList = gps.tro.sensors
 datafileTemplate = kitk16230.tro.template
 datafileMask = kitk<index>.tro
 samplingTime = 15 min
+
+[SOD]
+moduleName = SODAR
+moduleNumber = 70
+moduleType = sodar
+moduleComment = sodar_comment
+sensorGroup = mnd
+sensorList = sodar.mnd.sensors
+datafileTemplate = 110221.mnd.template
+datafileMask = <index>.mnd
+samplingTime = 30 min
